--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "axios": "^1.6.7",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "redis": "^3.1.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
